--- a/style/main.css
+++ b/style/main.css
@@ -351,6 +351,7 @@ hr {
     color: #f9f6f2;
     background: #edcf72;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
+    font-size: 10px;
      }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
@@ -359,6 +360,7 @@ hr {
     color: #f9f6f2;
     background: #edcc61;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
+    font-size: 10px;
      }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
@@ -375,6 +377,7 @@ hr {
     color: #f9f6f2;
     background: #edc53f;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
+    font-size: 10px;
      }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
@@ -383,6 +386,7 @@ hr {
     color: #f9f6f2;
     background: #edc22e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 10px;
      }
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
